--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 	<div class="progressBar">
 		<div class="steps">
 			<span class='stepIndicator'></span>
-			<span class="step" data-step="step1">Step 1</span>
+			<span class="step active" data-step="step1">Step 1</span>
 			<span class="step" data-step="step2">Step 2</span>
 			<span class="step" data-step="step3">Step 3</span>
 			<span class="step" data-step="stepTotal">Est. Bill</span>
@@ -62,7 +62,7 @@
 					<div class="formElements">
 						<label for="totalDue">Total Amount Due</label>
 						<span class="unit">$</span>
-						<input id="totalDue" type="text" placeholder="0.0" />
+						<input id="totalDue" type="text" placeholder="0.00" />
 						<button class="next">
 							<span>next</span>
 							<span class="material-icons" hidden>chevron_right</span>
